# aoc2022

./: .gitignore  aoc.cabal
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day15pt2Fast.hs  Day16.hs  Day17.hs  Day18.hs  Day2.hs  Day20.hs  Day21.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Hydra.hs  Main.hs  RE.hs  WZ.hs  WrapZip.hs
