cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michael Lan
maintainer:         michaellan202@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base               ^>=4.16.3.0
    , containers
    , extra
    , megaparsec
    , mtl
    , pretty-tree
    , regex-applicative
    , regexpr
    , rosezipper
    , split
    , text
    , vector

  default-extensions:
    ImportQualifiedPost
    TupleSections
    ViewPatterns
    LexicalNegation

  hs-source-dirs:     app
  default-language:   Haskell2010
