cabal-version: 2.4
name:          aoc
version:       0.1.0.0
author:        Michael Lan
maintainer:    michaellan202@gmail.com

executable aoc
  main-is:            Main.hs

  -- cabal-fmt: expand app -Main
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day15pt2Fast
    Day16
    Day17
    Day18
    Day20
    Day21
    Hydra
    RE
    Sym
    WrapZip
    WZ

  build-depends:
    , base               ^>=4.16.3.0
    , chimera
    , containers
    , extra
    , megaparsec
    , mtl
    , pretty-tree
    , process
    , regex-applicative
    , regexpr
    , rosezipper
    , split
    , text
    , vector
    , pager

  default-extensions:
    ImportQualifiedPost
    TupleSections
    ViewPatterns
    LexicalNegation

  hs-source-dirs:     app
  default-language:   Haskell2010
